Apply spotless to all the Java Code
Signed-off-by: Danno Ferrin <danno.ferrin@hedera.com>