@@ -20,13 +20,15 @@ package com.hedera.services.bdd.spec.transactions.token;
  * ‍
  */
 
+import static com.hedera.services.bdd.spec.transactions.TxnUtils.asId;
+import static com.hedera.services.bdd.spec.transactions.TxnUtils.asTokenId;
+
 import com.hedera.services.bdd.spec.HapiApiSpec;
 import com.hedera.services.bdd.suites.HapiApiSuite;
 import com.hederahashgraph.api.proto.java.AccountAmount;
 import com.hederahashgraph.api.proto.java.NftTransfer;
 import com.hederahashgraph.api.proto.java.TokenID;
 import com.hederahashgraph.api.proto.java.TokenTransferList;
-
 import java.util.AbstractMap;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -35,233 +37,202 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.function.Function;
 
-import static com.hedera.services.bdd.spec.transactions.TxnUtils.asId;
-import static com.hedera.services.bdd.spec.transactions.TxnUtils.asTokenId;
-
 public class TokenMovement {
-	private final long amount;
-	private final String token;
-	private long[] serialNums;
-	private Optional<String> sender;
-	private Optional<String> receiver;
-	private final Optional<List<String>> receivers;
-	private final Optional<Function<HapiApiSpec, String>> senderFn;
-	private final Optional<Function<HapiApiSpec, String>> receiverFn;
+  private final long amount;
+  private final String token;
+  private long[] serialNums;
+  private Optional<String> sender;
+  private Optional<String> receiver;
+  private final Optional<List<String>> receivers;
+  private final Optional<Function<HapiApiSpec, String>> senderFn;
+  private final Optional<Function<HapiApiSpec, String>> receiverFn;
 
-	public static final TokenID HBAR_SENTINEL_TOKEN_ID = TokenID.getDefaultInstance();
+  public static final TokenID HBAR_SENTINEL_TOKEN_ID = TokenID.getDefaultInstance();
 
-	TokenMovement(
-			String token,
-			Optional<String> sender,
-			long amount,
-			Optional<String> receiver,
-			Optional<List<String>> receivers
-	) {
-		this.token = token;
-		this.sender = sender;
-		this.amount = amount;
-		this.receiver = receiver;
-		this.receivers = receivers;
+  TokenMovement(
+      String token,
+      Optional<String> sender,
+      long amount,
+      Optional<String> receiver,
+      Optional<List<String>> receivers) {
+    this.token = token;
+    this.sender = sender;
+    this.amount = amount;
+    this.receiver = receiver;
+    this.receivers = receivers;
 
-		senderFn = Optional.empty();
-		receiverFn = Optional.empty();
-	}
+    senderFn = Optional.empty();
+    receiverFn = Optional.empty();
+  }
 
-	TokenMovement(
-			String token,
-			Function<HapiApiSpec, String> senderFn,
-			long amount,
-			Function<HapiApiSpec, String> receiverFn
-	) {
-		this.token = token;
-		this.senderFn = Optional.of(senderFn);
-		this.amount = amount;
-		this.receiverFn = Optional.of(receiverFn);
+  TokenMovement(
+      String token,
+      Function<HapiApiSpec, String> senderFn,
+      long amount,
+      Function<HapiApiSpec, String> receiverFn) {
+    this.token = token;
+    this.senderFn = Optional.of(senderFn);
+    this.amount = amount;
+    this.receiverFn = Optional.of(receiverFn);
 
-		sender = Optional.empty();
-		receiver = Optional.empty();
-		receivers = Optional.empty();
-	}
+    sender = Optional.empty();
+    receiver = Optional.empty();
+    receivers = Optional.empty();
+  }
 
-	TokenMovement(
-			String token,
-			Optional<String> sender,
-			long amount,
-			long[] serialNums,
-			Optional<String> receiver,
-			Optional<List<String>> receivers
-	) {
-		this.token = token;
-		this.sender = sender;
-		this.amount = amount;
-		this.serialNums = serialNums;
-		this.receiver = receiver;
-		this.receivers = receivers;
+  TokenMovement(
+      String token,
+      Optional<String> sender,
+      long amount,
+      long[] serialNums,
+      Optional<String> receiver,
+      Optional<List<String>> receivers) {
+    this.token = token;
+    this.sender = sender;
+    this.amount = amount;
+    this.serialNums = serialNums;
+    this.receiver = receiver;
+    this.receivers = receivers;
 
-		senderFn = Optional.empty();
-		receiverFn = Optional.empty();
-	}
+    senderFn = Optional.empty();
+    receiverFn = Optional.empty();
+  }
 
-	public boolean isTrulyToken() {
-		return token != HapiApiSuite.HBAR_TOKEN_SENTINEL;
-	}
+  public boolean isTrulyToken() {
+    return token != HapiApiSuite.HBAR_TOKEN_SENTINEL;
+  }
 
-	public boolean isFungibleToken() {
-		return serialNums == null;
-	}
+  public boolean isFungibleToken() {
+    return serialNums == null;
+  }
 
-	public List<Map.Entry<String, Long>> generallyInvolved() {
-		if (sender.isPresent()) {
-			Map.Entry<String, Long> senderEntry = new AbstractMap.SimpleEntry<>(
-					token + "|" + sender.get(),
-					-amount);
-			return receiver.isPresent()
-					? List.of(
-					senderEntry,
-					new AbstractMap.SimpleEntry<>(
-							token + "|" + receiver.get(),
-							+amount))
-					: (receivers.isPresent() ? involvedInDistribution(senderEntry) : List.of(senderEntry));
-		}
-		return Collections.emptyList();
-	}
+  public List<Map.Entry<String, Long>> generallyInvolved() {
+    if (sender.isPresent()) {
+      Map.Entry<String, Long> senderEntry =
+          new AbstractMap.SimpleEntry<>(token + "|" + sender.get(), -amount);
+      return receiver.isPresent()
+          ? List.of(
+              senderEntry, new AbstractMap.SimpleEntry<>(token + "|" + receiver.get(), +amount))
+          : (receivers.isPresent() ? involvedInDistribution(senderEntry) : List.of(senderEntry));
+    }
+    return Collections.emptyList();
+  }
 
-	private List<Map.Entry<String, Long>> involvedInDistribution(Map.Entry<String, Long> senderEntry) {
-		List<Map.Entry<String, Long>> all = new ArrayList<>();
-		all.add(senderEntry);
-		var targets = receivers.get();
-		var perTarget = senderEntry.getValue() / targets.size();
-		for (String target : targets) {
-			all.add(new AbstractMap.SimpleEntry<>(target, perTarget));
-		}
-		return all;
-	}
+  private List<Map.Entry<String, Long>> involvedInDistribution(
+      Map.Entry<String, Long> senderEntry) {
+    List<Map.Entry<String, Long>> all = new ArrayList<>();
+    all.add(senderEntry);
+    var targets = receivers.get();
+    var perTarget = senderEntry.getValue() / targets.size();
+    for (String target : targets) {
+      all.add(new AbstractMap.SimpleEntry<>(target, perTarget));
+    }
+    return all;
+  }
 
-	public TokenTransferList specializedFor(HapiApiSpec spec) {
-		var scopedTransfers = TokenTransferList.newBuilder();
-		var id = isTrulyToken() ? asTokenId(token, spec) : HBAR_SENTINEL_TOKEN_ID;
-		scopedTransfers.setToken(id);
-		if (senderFn.isPresent()) {
-			var specialSender = senderFn.get().apply(spec);
-			sender = Optional.of(specialSender);
-			scopedTransfers.addTransfers(adjustment(specialSender, -amount, spec));
-		} else if (sender.isPresent()) {
-			scopedTransfers.addTransfers(adjustment(sender.get(), -amount, spec));
-		}
-		if (receiverFn.isPresent()) {
-			var specialReceiver = receiverFn.get().apply(spec);
-			receiver = Optional.of(specialReceiver);
-			scopedTransfers.addTransfers(adjustment(specialReceiver, +amount, spec));
-		} else if (receiver.isPresent()) {
-			scopedTransfers.addTransfers(adjustment(receiver.get(), +amount, spec));
-		} else if (receivers.isPresent()) {
-			var targets = receivers.get();
-			var amountPerReceiver = amount / targets.size();
-			for (int i = 0, n = targets.size(); i < n; i++) {
-				scopedTransfers.addTransfers(adjustment(targets.get(i), +amountPerReceiver, spec));
-			}
-		}
-		return scopedTransfers.build();
-	}
+  public TokenTransferList specializedFor(HapiApiSpec spec) {
+    var scopedTransfers = TokenTransferList.newBuilder();
+    var id = isTrulyToken() ? asTokenId(token, spec) : HBAR_SENTINEL_TOKEN_ID;
+    scopedTransfers.setToken(id);
+    if (senderFn.isPresent()) {
+      var specialSender = senderFn.get().apply(spec);
+      sender = Optional.of(specialSender);
+      scopedTransfers.addTransfers(adjustment(specialSender, -amount, spec));
+    } else if (sender.isPresent()) {
+      scopedTransfers.addTransfers(adjustment(sender.get(), -amount, spec));
+    }
+    if (receiverFn.isPresent()) {
+      var specialReceiver = receiverFn.get().apply(spec);
+      receiver = Optional.of(specialReceiver);
+      scopedTransfers.addTransfers(adjustment(specialReceiver, +amount, spec));
+    } else if (receiver.isPresent()) {
+      scopedTransfers.addTransfers(adjustment(receiver.get(), +amount, spec));
+    } else if (receivers.isPresent()) {
+      var targets = receivers.get();
+      var amountPerReceiver = amount / targets.size();
+      for (int i = 0, n = targets.size(); i < n; i++) {
+        scopedTransfers.addTransfers(adjustment(targets.get(i), +amountPerReceiver, spec));
+      }
+    }
+    return scopedTransfers.build();
+  }
 
-	public TokenTransferList specializedForNft(HapiApiSpec spec) {
-		var scopedTransfers = TokenTransferList.newBuilder();
-		var id = isTrulyToken() ? asTokenId(token, spec) : HBAR_SENTINEL_TOKEN_ID;
-		scopedTransfers.setToken(id);
-		if (sender.isPresent() && receiver.isPresent()) {
-			for (long serialNum : serialNums) {
-				scopedTransfers.addNftTransfers(adjustment(sender.get(), receiver.get(), serialNum, spec));
-			}
-		}
+  public TokenTransferList specializedForNft(HapiApiSpec spec) {
+    var scopedTransfers = TokenTransferList.newBuilder();
+    var id = isTrulyToken() ? asTokenId(token, spec) : HBAR_SENTINEL_TOKEN_ID;
+    scopedTransfers.setToken(id);
+    if (sender.isPresent() && receiver.isPresent()) {
+      for (long serialNum : serialNums) {
+        scopedTransfers.addNftTransfers(adjustment(sender.get(), receiver.get(), serialNum, spec));
+      }
+    }
 
-		return scopedTransfers.build();
-	}
+    return scopedTransfers.build();
+  }
 
-	private AccountAmount adjustment(String name, long value, HapiApiSpec spec) {
-		return AccountAmount.newBuilder()
-				.setAccountID(asId(name, spec))
-				.setAmount(value)
-				.build();
-	}
+  private AccountAmount adjustment(String name, long value, HapiApiSpec spec) {
+    return AccountAmount.newBuilder().setAccountID(asId(name, spec)).setAmount(value).build();
+  }
 
-	private NftTransfer adjustment(String senderName, String receiverName, long value, HapiApiSpec spec) {
-		return NftTransfer.newBuilder()
-				.setSenderAccountID(asId(senderName, spec))
-				.setReceiverAccountID(asId(receiverName, spec))
-				.setSerialNumber(value)
-				.build();
-	}
+  private NftTransfer adjustment(
+      String senderName, String receiverName, long value, HapiApiSpec spec) {
+    return NftTransfer.newBuilder()
+        .setSenderAccountID(asId(senderName, spec))
+        .setReceiverAccountID(asId(receiverName, spec))
+        .setSerialNumber(value)
+        .build();
+  }
 
-	public static class Builder {
-		private final long amount;
-		private long[] serialNums;
-		private final String token;
+  public static class Builder {
+    private final long amount;
+    private long[] serialNums;
+    private final String token;
 
-		public Builder(long amount, String token) {
-			this.token = token;
-			this.amount = amount;
-		}
+    public Builder(long amount, String token) {
+      this.token = token;
+      this.amount = amount;
+    }
 
-		public Builder(long amount, String token, long... serialNums) {
-			this.amount = amount;
-			this.token = token;
-			this.serialNums = serialNums;
+    public Builder(long amount, String token, long... serialNums) {
+      this.amount = amount;
+      this.token = token;
+      this.serialNums = serialNums;
+    }
 
-		}
+    public TokenMovement between(String sender, String receiver) {
+      return new TokenMovement(
+          token, Optional.of(sender), amount, serialNums, Optional.of(receiver), Optional.empty());
+    }
 
-		public TokenMovement between(String sender, String receiver) {
-			return new TokenMovement(
-					token,
-					Optional.of(sender),
-					amount,
-					serialNums,
-					Optional.of(receiver),
-					Optional.empty());
-		}
+    public TokenMovement between(
+        Function<HapiApiSpec, String> senderFn, Function<HapiApiSpec, String> receiverFn) {
+      return new TokenMovement(token, senderFn, amount, receiverFn);
+    }
 
-		public TokenMovement between(
-				Function<HapiApiSpec, String> senderFn,
-				Function<HapiApiSpec, String> receiverFn
-		) {
-			return new TokenMovement(
-					token,
-					senderFn,
-					amount,
-					receiverFn);
-		}
+    public TokenMovement distributing(String sender, String... receivers) {
+      return new TokenMovement(
+          token, Optional.of(sender), amount, Optional.empty(), Optional.of(List.of(receivers)));
+    }
 
-		public TokenMovement distributing(String sender, String... receivers) {
-			return new TokenMovement(
-					token,
-					Optional.of(sender),
-					amount,
-					Optional.empty(),
-					Optional.of(List.of(receivers)));
-		}
+    public TokenMovement from(String magician) {
+      return new TokenMovement(
+          token, Optional.of(magician), amount, Optional.empty(), Optional.empty());
+    }
 
-		public TokenMovement from(String magician) {
-			return new TokenMovement(
-					token,
-					Optional.of(magician),
-					amount,
-					Optional.empty(),
-					Optional.empty());
-		}
+    public TokenMovement empty() {
+      return new TokenMovement(token, Optional.empty(), amount, Optional.empty(), Optional.empty());
+    }
+  }
 
-		public TokenMovement empty() {
-			return new TokenMovement(token, Optional.empty(), amount, Optional.empty(), Optional.empty());
-		}
-	}
+  public static Builder moving(long amount, String token) {
+    return new Builder(amount, token);
+  }
 
-	public static Builder moving(long amount, String token) {
-		return new Builder(amount, token);
-	}
+  public static Builder movingUnique(String token, long... serialNums) {
+    return new Builder(1, token, serialNums);
+  }
 
-	public static Builder movingUnique(String token, long... serialNums) {
-		return new Builder(1, token, serialNums);
-	}
-
-	public static Builder movingHbar(long amount) {
-		return new Builder(amount, HapiApiSuite.HBAR_TOKEN_SENTINEL);
-	}
+  public static Builder movingHbar(long amount) {
+    return new Builder(amount, HapiApiSuite.HBAR_TOKEN_SENTINEL);
+  }
 }
