@@ -20,13 +20,15 @@ package com.hedera.services.yahcli.suites;
  * ‍
  */
 
+import static com.hedera.services.bdd.spec.HapiApiSpec.customHapiSpec;
+import static com.hedera.services.bdd.spec.utilops.UtilVerbs.updateLargeFile;
+import static com.hedera.services.bdd.suites.utils.sysfiles.serdes.StandardSerdes.SYS_FILE_SERDES;
+import static com.hedera.services.yahcli.output.CommonMessages.COMMON_MESSAGES;
+
 import com.google.protobuf.ByteString;
 import com.hedera.services.bdd.spec.HapiApiSpec;
 import com.hedera.services.bdd.suites.HapiApiSuite;
 import com.hedera.services.bdd.suites.utils.sysfiles.serdes.SysFileSerde;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
@@ -35,90 +37,93 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.OptionalLong;
-
-import static com.hedera.services.bdd.spec.HapiApiSpec.customHapiSpec;
-import static com.hedera.services.bdd.spec.utilops.UtilVerbs.updateLargeFile;
-import static com.hedera.services.bdd.suites.utils.sysfiles.serdes.StandardSerdes.SYS_FILE_SERDES;
-import static com.hedera.services.yahcli.output.CommonMessages.COMMON_MESSAGES;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 public class SysFileUploadSuite extends HapiApiSuite {
-	private static final Logger log = LogManager.getLogger(SysFileUploadSuite.class);
+  private static final Logger log = LogManager.getLogger(SysFileUploadSuite.class);
 
-	private final long sysFileId;
-	private final String srcDir;
-	private final boolean isDryRun;
-	private final Map<String, String> specConfig;
+  private final long sysFileId;
+  private final String srcDir;
+  private final boolean isDryRun;
+  private final Map<String, String> specConfig;
 
-	private ByteString uploadData;
+  private ByteString uploadData;
 
-	public SysFileUploadSuite(
-			final String srcDir,
-			final Map<String, String> specConfig,
-			final String sysFile,
-			final boolean isDryRun
-	) {
-		this.srcDir = srcDir;
-		this.isDryRun = isDryRun;
-		this.specConfig = specConfig;
-		this.sysFileId = Utils.rationalized(sysFile);
-	}
+  public SysFileUploadSuite(
+      final String srcDir,
+      final Map<String, String> specConfig,
+      final String sysFile,
+      final boolean isDryRun) {
+    this.srcDir = srcDir;
+    this.isDryRun = isDryRun;
+    this.specConfig = specConfig;
+    this.sysFileId = Utils.rationalized(sysFile);
+  }
 
-	@Override
-	protected Logger getResultsLogger() {
-		return log;
-	}
+  @Override
+  protected Logger getResultsLogger() {
+    return log;
+  }
 
-	@Override
-	protected List<HapiApiSpec> getSpecsInSuite() {
-		uploadData = appropriateContents(sysFileId);
-		return isDryRun ? Collections.emptyList() : List.of(new HapiApiSpec[] { uploadSysFiles(), });
-	}
+  @Override
+  protected List<HapiApiSpec> getSpecsInSuite() {
+    uploadData = appropriateContents(sysFileId);
+    return isDryRun
+        ? Collections.emptyList()
+        : List.of(
+            new HapiApiSpec[] {
+              uploadSysFiles(),
+            });
+  }
 
-	private HapiApiSpec uploadSysFiles() {
-		final var name = String.format("UploadSystemFile-%s", sysFileId);
+  private HapiApiSpec uploadSysFiles() {
+    final var name = String.format("UploadSystemFile-%s", sysFileId);
 
-		return customHapiSpec(name).withProperties(
-				specConfig
-		).given().when().then(
-				updateLargeFile(
-						DEFAULT_PAYER,
-						String.format("0.0.%d", sysFileId),
-						uploadData,
-						true,
-						OptionalLong.of(10_000_000_000L),
-						updateOp -> updateOp
-								.alertingPre(COMMON_MESSAGES::uploadBeginning)
-								.alertingPost(COMMON_MESSAGES::uploadEnding),
-						appendOp -> appendOp
-								.alertingPre(COMMON_MESSAGES::appendBeginning)
-								.alertingPost(COMMON_MESSAGES::appendEnding)
-				)
-		);
-	}
+    return customHapiSpec(name)
+        .withProperties(specConfig)
+        .given()
+        .when()
+        .then(
+            updateLargeFile(
+                DEFAULT_PAYER,
+                String.format("0.0.%d", sysFileId),
+                uploadData,
+                true,
+                OptionalLong.of(10_000_000_000L),
+                updateOp ->
+                    updateOp
+                        .alertingPre(COMMON_MESSAGES::uploadBeginning)
+                        .alertingPost(COMMON_MESSAGES::uploadEnding),
+                appendOp ->
+                    appendOp
+                        .alertingPre(COMMON_MESSAGES::appendBeginning)
+                        .alertingPost(COMMON_MESSAGES::appendEnding)));
+  }
 
-	private ByteString appropriateContents(final Long fileNum) {
-		SysFileSerde<String> serde = SYS_FILE_SERDES.get(fileNum);
-		String name = serde.preferredFileName();
-		String loc = srcDir + File.separator + name;
-		try {
-			final var stylized = Files.readString(Paths.get(loc));
-			final var contents = ByteString.copyFrom(serde.toValidatedRawFile(stylized));
-			if (isDryRun) {
-				final var contentsLoc = binVersionOfPath(loc);
-				Files.write(Paths.get(contentsLoc), contents.toByteArray());
-			}
-			return contents;
-		} catch (IOException e) {
-			throw new IllegalStateException("Cannot read update file @ '" + loc + "'!", e);
-		}
-	}
+  private ByteString appropriateContents(final Long fileNum) {
+    SysFileSerde<String> serde = SYS_FILE_SERDES.get(fileNum);
+    String name = serde.preferredFileName();
+    String loc = srcDir + File.separator + name;
+    try {
+      final var stylized = Files.readString(Paths.get(loc));
+      final var contents = ByteString.copyFrom(serde.toValidatedRawFile(stylized));
+      if (isDryRun) {
+        final var contentsLoc = binVersionOfPath(loc);
+        Files.write(Paths.get(contentsLoc), contents.toByteArray());
+      }
+      return contents;
+    } catch (IOException e) {
+      throw new IllegalStateException("Cannot read update file @ '" + loc + "'!", e);
+    }
+  }
 
-	private String binVersionOfPath(final String loc) {
-		final int lastDot = loc.lastIndexOf(".");
-		if (lastDot == -1) {
-			return loc + ".bin";
-		} else {
-			return loc.substring(0, lastDot) + ".bin";
-		}
-	}
+  private String binVersionOfPath(final String loc) {
+    final int lastDot = loc.lastIndexOf(".");
+    if (lastDot == -1) {
+      return loc + ".bin";
+    } else {
+      return loc.substring(0, lastDot) + ".bin";
+    }
+  }
 }
